Fix: too much spacing around chat blocks

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -51,8 +51,12 @@
   margin-bottom: 0;
 }
 
-.content .chat dd p + p {
-  margin-top: 0.5em;
+#post .chat dd p:first-child {
+  margin-top: 0;
+}
+
+#post .chat dd p:last-child {
+  margin-bottom: 0;
 }
 
 .content .chat .action p,
